--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ OOP_C++/Project1/.vs/Project1/v16/Browse.VC.db-wal
 OOP_C++/Project1/.vs/Project1/v16/Browse.VC.db
 OOP_C++/Project1/.vs/Project1/v16/Browse.VC.db-shm
 OOP_C++/Project1/.vs/Project1/v16/Browse.VC.opendb
+OOP_C++/Project4/.vs/Project4/v16/Browse.VC.db-wal
+OOP_C++/Project4/.vs/Project4/v16/Browse.VC.db-shm
+OOP_C++/Project4/.vs/Project4/v16/Browse.VC.opendb
