--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ OOP_C++/Project1/.vs/Project1/v16/Browse.VC.opendb
 OOP_C++/Project4/.vs/Project4/v16/Browse.VC.db-wal
 OOP_C++/Project4/.vs/Project4/v16/Browse.VC.db-shm
 OOP_C++/Project4/.vs/Project4/v16/Browse.VC.opendb
+OOP_C++/Project5/.vs/Project5/v16/Browse.VC.opendb
+OOP_C++/Project6/.vs/Project6/v16/Browse.VC.opendb
