Update OPP week7 : exception and operator overloading

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ OOP_C++/Project4/.vs/Project4/v16/Browse.VC.db-shm
 OOP_C++/Project4/.vs/Project4/v16/Browse.VC.opendb
 OOP_C++/Project5/.vs/Project5/v16/Browse.VC.opendb
 OOP_C++/Project6/.vs/Project6/v16/Browse.VC.opendb
+OOP_C++/Project7/.vs/Project7/v16/Browse.VC.opendb
